fixed the expanding navbar on main and healthyish page, prevented menu from being visible on resize

--- a/css/healthyish.css
+++ b/css/healthyish.css
@@ -263,6 +263,7 @@ body {
   position: fixed;
   top: 0;
   left: -100%;
+  opacity: 0;
   background-color: #f8f8f8;
   transition: left 0.2s ease-in-out;
 }
